--- a/src/main/resources/templates/consulta/index.html
+++ b/src/main/resources/templates/consulta/index.html
@@ -4,27 +4,25 @@
     <body>
         <div class="container">
             <nav th:replace="layout :: menu">(menu)</nav>
-            <a href="form.html" th:href="@{/paciente/novo}" class="btn btn-primary btn-lg" role="button">Novo</a>
+            <a href="form.html" th:href="@{/consulta/novo}" class="btn btn-primary btn-lg" role="button">Novo</a>
             <div class="border border-dark">
                 <table class="table">
                     <thead class="thead-light"> 
                         <tr>
-                            <th scope="col">Nome</th>
-                            <th scope="col">Sexo</th>
-                               <th scope="col">Data Nascimento</th>
-                               <th scope="col">Cidade</th>
+                            <th scope="col">Data</th>
+                            <th scope="col">Médico</th>
+                            <th scope="col">Paciente</th>
                             <th scope="col"></th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr scope="row" th:each="umpac : ${listapac}">
-                            <td th:text="${umpac.nome}"></td>
-                            <td th:text="${umpac.sexo}"></td>
-                             <td th:text="${#dates.format(umpac.dataNascimento, 'dd/MM/yyyy HH:mm')}"></td>
-                              <td th:text="${umpac.cidade.nome}"></td>
-                            <td>
-                                <a href="form.html" th:href="@{'/paciente/alterar/' + ${umpac.id}}" class="btn btn-secondary btn-lg" role="button">Alterar</a>
-                                <a href="#" class="btn btn-warning btn-lg" role="button" data-toggle="modal" data-target="#confirmaExclusao" th:data-id="${umpac.id}">Excluir</a>
+                        <tr scope="row" th:each="umacons : ${listaConsulta}">
+                            <td th:text="${#dates.format(umacons.data, 'dd/MM/yyyy HH:mm')}"></td>
+                            <td th:text="${umacons.medicoResponsavel.nome}"></td>
+                            <td th:text="${umacons.paciente.nome}"></td>
+                             <td>
+                                <a href="form.html" th:href="@{'/consulta/alterar/' + ${umacons.id}}" class="btn btn-secondary btn-lg" role="button">Alterar</a>
+                                <a href="#" class="btn btn-warning btn-lg" role="button" data-toggle="modal" data-target="#confirmaExclusao" th:data-id="${umacons.id}">Excluir</a>
                             </td>
                         </tr>
                     </tbody>
@@ -40,7 +38,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>Confirma a exclusão deste registro do Paciente?</p>
+                            <p>Confirma a exclusão desta consulta?</p>
                         </div>
                         <div class="modal-footer">
                             <a href="#" class="btn btn-warning btn-lg" id="btnConf" role="button">Sim</a>
@@ -57,7 +55,7 @@
                   var button = $(event.relatedTarget)
                   var recipient = button.data('id')
                   var modal = $(this)
-                  modal.find('#btnConf').attr("href","/paciente/remover/" + recipient)
+                  modal.find('#btnConf').attr("href","/consulta/remover/" + recipient)
                 })
            /*]]>*/
         </script> 
